--- a/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
+++ b/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
@@ -55,6 +55,9 @@
         "\n",
         "Please review the CERES [FAQs](https://ceres.larc.nasa.gov/resources/faqs) before getting started.\n",
         "\n",
+        "For an xarray review, see this [tutorial](https://earth-env-data-science.github.io/lectures/xarray/xarray_intro.html)\n",
+        "and the [xarray documentation.](https://xarray.pydata.org/en/stable/index.html)\n",
+        "\n",
         "Start by importing Numpy, Matplotlib, and Xarray. Set the default figure size to (12, 6)."
       ]
     },
@@ -389,7 +392,7 @@
         "id": "mirTPg1w3bD7"
       },
       "source": [
-        "## 4.3) Plot the cumulatuve sum in latitude of that quantity\n",
+        "## 4.3) Plot the cumulative sum in latitude of that quantity\n",
         "\n",
         "Label with correct units. (Hint: check out xarray's [cumsum](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.cumsum.html) function.)\n",
         "\n",
