--- a/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
+++ b/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
@@ -55,10 +55,12 @@
         "\n",
         "Please review the CERES [FAQs](https://ceres.larc.nasa.gov/resources/faqs) before getting started.\n",
         "\n",
+        "This is good background reading on [Earth's energy budget](https://earthobservatory.nasa.gov/features/EnergyBalance#:~:text=Areas%20around%20the%20equator%20absorbed,and%20blue%20than%20they%20absorbed.)\n",
+        "\n",
         "For an xarray review, see this [tutorial](https://earth-env-data-science.github.io/lectures/xarray/xarray_intro.html)\n",
         "and the [xarray documentation.](https://xarray.pydata.org/en/stable/index.html)\n",
         "\n",
-        "Start by importing Numpy, Matplotlib, and Xarray. Set the default figure size to (12, 6)."
+        "Start by importing Numpy, Matplotlib, and Xarray. Set the default figure size to (12, 6) - this can be done by setting matplotlib plt.rcParams()."
       ]
     },
     {
@@ -78,7 +80,7 @@
         "id": "-pZBt72n3bD2"
       },
       "source": [
-        "Next, download the NetCDF file using wget."
+        "Next, download the NetCDF file using wget (remember Colab requires a '!' before a linux shell command such as wget)."
       ]
     },
     {
@@ -119,7 +121,7 @@
       },
       "source": [
         "## 1.2) Print out the `long_name` attribute of each variable\n",
-        "Print `variable`: `long name` for each variable. Format the output so that the start of the `long name` attributes are aligned. "
+        "Print `variable`: `long name` for each variable. Format the output so that the start of the `long name` attributes are aligned. Hint: xarray.Dataset.variables can be used to iterate over variables in an xarray dataset and xarray.DataArray.attrs to return the 'long_name' attribute. Another hint: executing xarray.variable in a cell will print the details for that variable, including the attributes. "
       ]
     },
     {
@@ -162,7 +164,9 @@
         "## 2.2) From this, make a 2D plot of the the time-mean TOA longwave, shortwave, and solar radiation\n",
         "(All-Sky conditions)\n",
         "\n",
-        "Note the sign conventions on each variable."
+        "Note the sign conventions on each variable.\n",
+        "\n",
+        "Hint: for plotting, an easy starting point is xr.DataArray.plot(), where DataArray can be accessed for each variable in a dataset by xr.Dataset.variable. The general xr.DataArray.plot() is just a wrapper for matplotlib that uses the coordinates for the variables to set \"reasonable\" plotting parameters and labels. "
       ]
     },
     {
@@ -239,7 +243,7 @@
       "source": [
         "The answer is that each \"pixel\" or \"grid point\" of this dataset does not represent an equal area of Earth's surface. So naively taking the mean, i.e. giving equal weight to each point, gives the wrong answer.\n",
         "\n",
-        "On a lat / lon grid, the relative area of each grid point is proportional to $\\cos(\\lambda)$. ($\\lambda$ is latitude)\n",
+        "On a lat / lon grid, the relative area of each grid point is proportional to $\\cos(\\lambda)$. ($\\lambda$ is latitude in radians.)\n",
         "\n",
         "## 3.2) Create a `weight` array proportional to $\\cos(\\lambda)$ with a mean value of 1\n",
         "\n",
