--- a/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
+++ b/Assignments/Problem_Set_1/Problem_Set_1_TOA_Fluxes.ipynb
@@ -55,7 +55,9 @@
         "\n",
         "Please review the CERES [FAQs](https://ceres.larc.nasa.gov/resources/faqs) before getting started.\n",
         "\n",
-        "This is good background reading on [Earth's energy budget](https://earthobservatory.nasa.gov/features/EnergyBalance#:~:text=Areas%20around%20the%20equator%20absorbed,and%20blue%20than%20they%20absorbed.)\n",
+        "This is a nice visualization of the energy budget from [NASA](https://svs.gsfc.nasa.gov/4794)\n",
+        "\n",
+        "This is good background reading on [Earth's energy budget](https://earthobservatory.nasa.gov/features/EnergyBalance)\n",
         "\n",
         "For an xarray review, see this [tutorial](https://earth-env-data-science.github.io/lectures/xarray/xarray_intro.html)\n",
         "and the [xarray documentation.](https://xarray.pydata.org/en/stable/index.html)\n",
